--- a/templates/add_cof.html
+++ b/templates/add_cof.html
@@ -131,6 +131,7 @@
         </table>
 
     <button type="submit" style="margin-left: 400px" class="btn btn-primary">提交</button>
+    <a type="button" href="{% url 'cof_detail' cof_id=cof.id %}" style="margin-left: -120px" class="btn btn-danger">返回</a>
 </form>
 </div>
 {% endblock %}
